<resources>
    <string name="accept_success">Los datos han sigo guardados exitosamente!</string>
    <string name="parse_app_id">crkoKcmoPJibL0vesZoChlncCnm3KxJ5X85BP26Y</string>
    <string name="parse_client_key">m0CnutU0puprEwHitWaCDzH5eroFlSTUMTm80wgN</string>
    <string name="app_name">Historial de Salud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="icon_android">&#xf17b;</string>
    <string name="icon_anadir">&#xf067;</string>
    <string name="icon_aceptar">&#xf00c;</string>
    <string name="icon_cancelar">&#xf00d;</string>
    <string name="icon_galery">&#xf1c5;</string>
    <string-array name="nav_options">
        <item>Historial Personal de Salud</item>
        <item>Usuario</item>
        <item>Antecedentes de Enfermedades</item>
        <item>Visita Medica</item>
        <item>Reportes</item>
        <item>Configuración</item>
    </string-array>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string-array name="tabs_options">
        <item>Tab 1</item>
        <item>Tab 2</item>
        <item>Tab 3</item>
    </string-array>
    <string-array name="tabs_usuario">
        <item>Datos Personales</item>
        <item>Datos Físicos</item>
    </string-array>
    <string-array name="tabs_antecedentes_enfermedades">
        <item>Enfermedades Personales</item>
        <item>Enfermedades Familiares</item>
    </string-array>
    <string-array name="tabs_visita_medica">
        <item>Motivo de la Consulta</item>
        <item>Exámenes Complementarios</item>
        <item>Diagnóstico de Enfermedades</item>
        <item>Tratamientos</item>
    </string-array>
    <string-array name="tabs_reportes">
        <item>Completo</item>
        <item>Exámenes Complementarios</item>
        <item>Resumen</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre : </string>
    <string name="edad">Edad : </string>
    <string name="estado_civil">Estado Civil : </string>
    <string name="nacionalidad">Nacionalidad : </string>
    <string name="ocupacion">Ocupacion : </string>
    <string name="domicilio">Domicilio : </string>
    <string name="responsable">Responsable : </string>
    <string name="sexo">Sexo : </string>
    <string name="fecha">Fecha : </string>
    <string name="altura">Altura en (cm) : </string>
    <string name="peso">Peso en (kg): </string>
    <string name="temperatura">Temperatura en (ºC) : </string>
    <string name="parto">Parto : </string>
    <string name="tipo_parto">Tipo de Parto : </string>
    <string name="peso_nacer">Peso al nacer en (kg):</string>
    <string name="sintomas">Síntomas : </string>
    <string name="titulo_examen">Título :</string>
    <string name="anadir">Añadir</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="antecedentes_fisiologicos">Antecedentes Fisiológicos</string>
    <string name="antecedentes_ginoobstetricos">Antecedentes Ginoobstétricos</string>
    <string name="antecedentes_patologicos">Antecedentes Patológicos</string>
    <string name="embarazos">Embarazos</string>
    <string name="menarquia">Menarquia (años): </string>
    <string name="menopausia">Menopausia (años): </string>
    <string name="duracion_menstruacion">Duración de la Menstruación (días): </string>
    <string name="frecuencia">Frecuencia (días): </string>
    <string name="fecha_ultima_menstruacion">Fecha de la última Menstruación : </string>
    <string name="enfermedad">Enfermedad : </string>
    <string name="tiempo_embarazo">Tiempo de Embarazo (semanas): </string>
    <string name="parentesco">Parentesco : </string>
    <string name="nueva_visita_medica">Iniciar una consulta medica</string>
    <string name="consulta_medica">Consulta Medica</string>
    <string name="centro_medico">Centro Medico : </string>
    <string name="especialidad">Especialidad : </string>
    <string name="nombre_doctor">Nombre del Doctor : </string>
    <string name="fecha_consulta">Fecha de Consulta : </string>
    <string name="registre_sintomas">Registre sus Síntomas</string>
    <string name="otro">Otros : </string>
    <string name="terminar_consulta">Terminar Consulta</string>
    <string name="regresar_visita">Visitas medicas</string>
    <string name="usuario">Usuario :</string>
    <string name="contrasena">Contraseña :</string>
    <string name="pregunta_seguridad">Pregunta de seguridad :</string>
    <string name="examenes_complementarios">Examenes Complementarios</string>
    <string name="resultado_examen">Resultado :</string>
    <string name="diagnostico_consulta">Diagnóstico de la Consulta</string>
    <string name="tratamientos">Tratamientos</string>
    <string name="descripcion_tratamiento">Descripción :</string>
    <string name="nombre_medicamento">Nombre del medicamento :</string>
    <string name="dosis">Dosis :</string>
    <string name="frecuencia_medicamento">Frecuencia :</string>
    <string name="fecha_inicio_tratamiento">Fecha de inicio del tratamiento :</string>
    <string name="fecha_fin_tratamiento">Fecha de suspención del tratamiento :</string>
    <string name="action_new">New Note</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_edit_note">Add/Edit</string>
    <string name="note_title_hint">Title</string>
    <string name="note_content_hint">Content</string>
    <string name="save_button">Save</string>
    <string name="edit_error_title">Error!</string>
    <string name="edit_error_message">You cannot save a note without a title</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="logout_label">Logout</string>
    <string name="seleccione_opcion">Por favor, Seleccione una opción.</string>
    <string name="adjuntar_imagen">Adjuntar imagen:</string>
</resources>