<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                style="@style/style_icon_button"
                android:id="@+id/btn_accept"
                android:text="@string/icon_aceptar" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                style="@style/style_icon_button"
                android:id="@+id/btn_cancel"
                android:text="@string/icon_cancelar"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/fecha"
        android:id="@+id/textView4"
        style="@style/style_textView" />

    <EditText
        android:id="@+id/et_fecha"
        style="@style/style_editText"
        android:focusable="false"/>

    <TextView
        android:text="@string/enfermedad"
        android:id="@+id/textView5"
        style="@style/style_textView"/>

    <EditText
        android:id="@+id/et_enfermedad"
        style="@style/style_editText"
        android:focusable="false"/>
    <TextView
        android:text="@string/tratamientos"
        android:id="@+id/textView6"
        style="@style/style_textView"/>

    <EditText
        android:id="@+id/et_tratamientos"
        style="@style/style_editText"/>

</LinearLayout>


