<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="10dp" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                style="@style/style_icon_button"
                android:id="@+id/btn_accept"
                android:text="@string/icon_aceptar" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <Button
                style="@style/style_icon_button"
                android:id="@+id/btn_cancel"
                android:text="@string/icon_cancelar"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/altura"
        android:id="@+id/textView5"
        style="@style/style_textView"/>

    <EditText
        android:id="@+id/et_altura"
        style="@style/style_editText"
        android:inputType="numberDecimal" />

    <TextView
        android:text="@string/peso"
        android:id="@+id/textView6"
        style="@style/style_textView"/>

    <EditText
        android:id="@+id/et_peso"
        style="@style/style_editText"
        android:inputType="numberDecimal" />

    <TextView
        android:text="@string/temperatura"
        android:id="@+id/textView7"
        style="@style/style_textView"/>

    <EditText
        android:id="@+id/et_temperatura"
        style="@style/style_editText"
        android:inputType="numberDecimal" />

</LinearLayout>


