<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:text="@string/parto"
        android:id="@+id/textView4"
        style="@style/style_textView" />

    <EditText
        android:id="@+id/fecha_et"
        style="@style/style_editText"/>

    <TextView
        android:text="@string/tipo_parto"
        android:id="@+id/textView5"
        style="@style/style_textView"/>

    <EditText
        android:id="@+id/altura_et"
        style="@style/style_editText"/>

    <TextView
        android:text="@string/peso_nacer"
        android:id="@+id/textView6"
        style="@style/style_textView"/>

    <EditText
        android:id="@+id/peso_et"
        style="@style/style_editText"/>

</LinearLayout>


