<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.configuracion.ConfiguracionFragment"
    android:background="@drawable/fondo_fragment"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="20dp">



            <TextView
                android:text="@string/usuario"
                android:id="@+id/textView17"
                style="@style/style_textView"
                />

            <EditText
                android:id="@+id/editText4"
                style="@style/style_editText"/>

            <TextView
                android:text="@string/contrasena"
                android:id="@+id/textView18"
                style="@style/style_textView"/>

            <EditText
                android:id="@+id/editText5"
                style="@style/style_editText"/>

            <TextView
                android:text="@string/pregunta_seguridad"
                android:id="@+id/textView19"
                style="@style/style_textView"/>

            <EditText
                android:id="@+id/editText6"
                style="@style/style_editText"/>

        </LinearLayout>

    </ScrollView>



</FrameLayout>
